Add status checking routines